Feature ETP-3208: Email sending popup.